AX: Support API: accessibilityReplaceRange:withText https://bugs.webkit.org/show_bug.cgi?id=196636

Unreviewed build fix for Windows port.

* DumpRenderTree/AccessibilityUIElement.cpp:
(AccessibilityUIElement::replaceTextInRange): Changed the return value type from void to bool.

Canonical link: https://commits.webkit.org/210998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244062 268f45cc-cd09-0410-ab3c-d52691b4dbfc