Tools/WebKitTestRunner/InjectedBundle/win/AccessibilityUIElementWin.cpp
@@ -979,6 +979,12 @@ JSRetainPtr<JSStringRef> AccessibilityUIElement::sentenceAtOffset(int)
     return nullptr;
 }
 
+bool AccessibilityUIElement::replaceTextInRange(JSStringRef, int, int)
+{
+    notImplemented();
+    return false;
+}
+
 } // namespace  WTF
 
 #endif // HAVE(ACCESSIBILITY)
